# zephyr_test

./: .clang-format  .gitignore  LICENSE  flake.nix
firmware/: CMakeLists.txt  Kconfig  frdm_rw612.overlay  native_sim_64.overlay  prj.conf  stm32h573i_dk.overlay  sysbuild.cmake  sysbuild.conf  west.yml
firmware/boards/: frdm_rw612.conf  native_sim_64.conf  nrf5340dk_nrf5340_cpuapp.conf  stm32h573i_dk.conf
firmware/cmake/: warn_all.cmake
firmware/include/: button.h  fatal_error.h  filesystem.h  firmware_updater.h  led.h  udpclient.h
firmware/src/: main.c  udpclient.c
firmware/src/application/common/: fatal_error.c
firmware/src/application/frdm_rw612/: firmware_updater.c  wifi_connect.c
firmware/src/application/native/: firmware_updater.c
firmware/src/application/nrf5340dk/: firmware_updater.c
firmware/src/application/stm32h573i/: firmware_updater.c
firmware/src/driver/common/: filesystem.c
firmware/src/driver/frdm_rw612/: button.c  led.c
firmware/src/driver/native/: button.c  led.c
firmware/src/driver/nrf5340dk/: button.c  led.c
firmware/src/driver/stm32h573i/: button.c  led.c
firmware/sysbuild/: mcuboot.conf  mcuboot.overlay
firmware/sysbuild/mcuboot/: prj.conf
firmware/sysbuild/mcuboot/boards/: frdm_rw612.conf  frdm_rw612.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  stm32h573i_dk.overlay
nix/pkgs/zsdk/: zsdk.nix
scripts/: run_native_sim.sh
